--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+body{
+  background-color: rgb(44, 52, 79);
+  margin: 0;
+  padding-left: 5px;
+}
+.container{
+  max-width: 1200px;
+  width: 100%;
+  display: grid;
+  grid-template-areas: "head head"
+                       "nav  main"  ;
+  grid-row-gap: 15px;
+  grid-column-gap: 10px;
+  grid-template-columns: 1fr 3fr;
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.container>*{
+  background-color: #423c94;
+  border-radius: 10px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
