--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-body{
+#root{
   background-color: rgb(44, 52, 79);
   margin: 0;
   padding-left: 5px;
@@ -19,4 +19,11 @@ body{
   background-color: #423c94;
   border-radius: 10px;
   color: white;
+}
+main{
+  grid-area: main;
+  padding: 10px;
+}
+*{
+  transition-duration: .2s;
 }
