--- a/src/components/Dialog/Dialog.css
+++ b/src/components/Dialog/Dialog.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    max-height: 100%;
+    overflow: auto;
 }
 
 .name{
@@ -12,9 +14,14 @@
 textarea{
     resize: none;
     display: inline;
-    width: 400px;
+    width: 599px;
+    margin-left: 10px;
 }
 button{
     padding: 10px  30px;
-    width: 406px;
+    width: 605px;
+    margin-left: 10px;
+}
+p{
+    margin: 10px;
 }
