--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@ main{
   overflow-x: hidden;
   overflow-y: scroll;
 }
-*{
-  transition-duration: .2s;
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
 }
