--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -13,3 +13,17 @@
     max-width: 575px;
     flex-grow: 1;
 }
+.message-enter {
+    opacity: 0;
+}
+.message-enter-active {
+    opacity: 1;
+    transition: opacity 2000ms;
+}
+.message-exit {
+    opacity: 1;
+}
+.message-exit-active {
+    opacity: 0;
+    transition: opacity 2000ms;
+}
